--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: libbitcoin
 Description:  Rewrite bitcoin, make it super-pluggable, very easy to do and hack everything at every level, and very configurable.
 Version: @PACKAGE_VERSION@
-Cflags: -I${includedir}
+Cflags: -I${includedir} -std=gnu++0x
 Libs: -L${libdir} -lcppdb -lcrypto -lboost_thread -lboost_system -ldl -lpq -lz -lpthread
 
