--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,7 +25,8 @@ libbitcoin_la_SOURCES = \
 	util/clock.cpp \
 	constants.cpp \
 	storage/postgresql/postgresql_blockchain.cpp \
-	storage/postgresql/postgresql_storage.cpp \
-	storage/bdb/bdb_storage.cpp \
-	storage/bdb/bitcoin.pb.cc
+	storage/postgresql/postgresql_storage.cpp
 
+if DO_BERKDB
+libbitcoin_la_SOURCES += storage/bdb/bdb_storage.cpp
+endif
