proto mumbo-jumbo, ask genjix what just happened

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,7 +27,8 @@ libbitcoin_la_SOURCES = \
 
 if DO_BERKDB
 libbitcoin_la_SOURCES += \
-	storage/bdb/bdb_storage.cpp
+	storage/bdb/bdb_storage.cpp \
+	storage/bdb/bitcoin.pb.cc
 endif
 
 if DO_POSTGRES
