Updated kernel for new style network interface.

--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -30,7 +30,9 @@ endif
 
 bitcoin_network_includedir = $(includedir)/bitcoin/network
 bitcoin_network_include_HEADERS = \
+	network/channel.hpp \
 	network/network.hpp \
+	network/shared_const_buffer.hpp \
 	network/types.hpp
 
 bitcoin_util_includedir = $(includedir)/bitcoin/util
