Allow child channel to outlive parent network object. We do this by creating a shared 'thread_core' that is passed between instances. Exclusion function sets (strand) use this thread_core as a factory.

--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -40,7 +40,7 @@ bitcoin_util_include_HEADERS = \
 	util/elliptic_curve_key.hpp \
 	util/sha256.hpp \
 	util/postbind.hpp \
-	util/threaded_service.hpp \
+	util/threads.hpp \
 	util/serializer.hpp \
 	util/assert.hpp \
 	util/big_number.hpp \
