--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,6 +31,7 @@ libbitcoin_la_SOURCES += \
 	blockchain/bdb/bdb_blockchain.cpp \
 	blockchain/bdb/bitcoin.pb.cc \
 	blockchain/bdb/bdb_chain_keeper.cpp \
+	blockchain/bdb/bdb_organizer.cpp \
 	blockchain/bdb/bdb_common.cpp \
 	blockchain/bdb/protobuf_wrapper.cpp
 endif
