dialect -> exporter, original_dialect -> satoshi_exporter

--- a/configure.ac
+++ b/configure.ac
@@ -24,8 +24,8 @@ AC_ARG_ENABLE(postgres,
 AM_CONDITIONAL([DO_POSTGRES], [test "$enable_postgres" = "yes"])
 
 AX_BOOST_BASE
-AX_BOOST_SYSTEM
-AX_BOOST_THREAD
+#AX_BOOST_SYSTEM
+#AX_BOOST_THREAD
 
 PKG_PROG_PKG_CONFIG
 
