--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -33,8 +33,7 @@ bitcoin_network_includedir = $(includedir)/bitcoin/network
 bitcoin_network_include_HEADERS = \
 	network/channel.hpp \
 	network/network.hpp \
-	network/shared_const_buffer.hpp \
-	network/types.hpp
+	network/shared_const_buffer.hpp
 
 bitcoin_util_includedir = $(includedir)/bitcoin/utility
 bitcoin_util_include_HEADERS = \
