Support for BIP 0014 (User Agent): https://en.bitcoin.it/wiki/BIP_0014

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,7 +18,7 @@ libbitcoin_la_SOURCES = \
     utility/elliptic_curve_key.cpp \
 	transaction.cpp \
 	error.cpp \
-	utility/threaded_service.cpp \
+	utility/threads.cpp \
     validate.cpp \
 	utility/base58.cpp \
 	utility/big_number.cpp \
