--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -6,6 +6,8 @@ includedir=@includedir@
 Name: libbitcoin
 Description:  Rewrite bitcoin, make it super-pluggable, very easy to do and hack everything at every level, and very configurable.
 Version: @PACKAGE_VERSION@
+Requires: libcurl
 Cflags: -I${includedir} -std=gnu++0x
-Libs: -L${libdir} -lbitcoin -lcrypto -lboost_thread -lboost_system -ldl -lz -lpthread @LDFLAG_BDB@ @LDFLAG_POSTGRES@
+Libs: -L${libdir} -lbitcoin -lboost_thread -lboost_system -lboost_regex @LDFLAG_BDB@ @LDFLAG_POSTGRES@
+Libs.private: -lcrypto -ldl -lz -lpthread
 
