--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,6 +7,7 @@ libbitcoin_la_SOURCES = \
 	network/channel.cpp \
 	network/hosts.cpp \
 	network/protocol.cpp \
+	network/seeds.cpp \
 	exporter.cpp  \
 	utility/serializer.cpp \
 	utility/logger.cpp \
