--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,6 +8,7 @@ libbitcoin_la_SOURCES = \
 	network/hosts.cpp \
 	network/protocol.cpp \
 	exporter.cpp  \
+	poller.cpp \
 	utility/serializer.cpp \
 	utility/logger.cpp \
 	utility/sha256.cpp \
