getx_responder: basic structure. responds to getblocks, getdata, and relays last block inv after 500th download.

--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -1,5 +1,6 @@
 bitcoin_includedir = $(includedir)/bitcoin
 bitcoin_include_HEADERS = \
+	getx_responder.hpp \
 	error.hpp \
 	validate.hpp \
 	messages.hpp \
