--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -8,6 +8,6 @@ Description:  Rewrite bitcoin, make it super-pluggable, very easy to do and hack
 Version: @PACKAGE_VERSION@
 Requires: libcurl
 Cflags: -I${includedir} -std=gnu++0x @CFLAG_BDB@
-Libs: -L${libdir} -lbitcoin -lboost_thread -lboost_system -lboost_regex -lpthread -lcurl @LDFLAG_BDB@ @LDFLAG_POSTGRES@
+Libs: -L${libdir} -lbitcoin -lboost_thread -lboost_system -lboost_regex -lboost_filesystem -lpthread -lcurl @LDFLAG_BDB@ @LDFLAG_POSTGRES@
 Libs.private: -lcrypto -ldl -lz
 
