--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -6,7 +6,7 @@ includedir=@includedir@
 Name: libbitcoin
 Description:  Rewrite bitcoin, make it super-pluggable, very easy to do and hack everything at every level, and very configurable.
 Version: @PACKAGE_VERSION@
-Requires: libcurl
+Requires: libcurl kyotocabinet
 Cflags: -I${includedir} -std=gnu++0x @CFLAG_BDB@
 Libs: -L${libdir} -lbitcoin -lboost_thread -lboost_system -lboost_regex -lboost_filesystem -lpthread -lcurl @LDFLAG_BDB@ @LDFLAG_POSTGRES@
 Libs.private: -lcrypto -ldl -lz
