install key_formats.hpp header

--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -58,5 +58,6 @@ bitcoin_util_include_HEADERS = \
 	utility/logger.hpp \
 	utility/coroutine.hpp \
 	utility/weak_bind.hpp \
+	utility/key_formats.hpp \
 	utility/yield.hpp
 
