Electrum compatible deterministic wallet.

--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -1,6 +1,7 @@
 bitcoin_includedir = $(includedir)/bitcoin
 bitcoin_include_HEADERS = \
     satoshi_serialize.hpp \
+    deterministic_wallet.hpp \
 	getx_responder.hpp \
 	error.hpp \
 	validate.hpp \
