--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,7 @@ AM_CPPFLAGS = -I$(srcdir)/../include
 AM_CXXFLAGS = ${my_CXXFLAGS}
 libbitcoin_la_SOURCES = \
     satoshi_serialize.cpp \
+    deterministic_wallet.cpp \
 	getx_responder.cpp \
 	async_service.cpp \
 	network/network.cpp  \
