basic framework for a leveldb blockchain. copied over bdb blockchain and renamed class prefixes to leveldb. methods need to be slowly migrated to using leveldb.

--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -30,6 +30,11 @@ bitcoin_blockchain_include_HEADERS += \
 	blockchain/bdb_blockchain.hpp
 endif
 
+if DO_LEVELDB
+bitcoin_blockchain_include_HEADERS += \
+	blockchain/bdb_blockchain.hpp
+endif
+
 bitcoin_network_includedir = $(includedir)/bitcoin/network
 bitcoin_network_include_HEADERS = \
 	network/channel.hpp \
