--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -6,8 +6,8 @@ includedir=@includedir@
 Name: libbitcoin
 Description:  Rewrite bitcoin, make it super-pluggable, very easy to do and hack everything at every level, and very configurable.
 Version: @PACKAGE_VERSION@
-Requires: libcurl @PKG_DEPEND_KYOTO@
-Cflags: -I${includedir} -std=gnu++0x @CFLAG_BDB@ @CFLAG_KYOTO@
-Libs: -L${libdir} -lbitcoin -lboost_thread -lboost_system -lboost_regex -lboost_filesystem -lpthread -lcurl @LDFLAG_BDB@ @LDFLAG_POSTGRES@
+Requires: libcurl
+Cflags: -I${includedir} -std=gnu++0x @CFLAG_BDB@ @CFLAG_LEVELDB@
+Libs: -L${libdir} -lbitcoin -lboost_thread -lboost_system -lboost_regex -lboost_filesystem -lpthread -lcurl @LDFLAG_BDB@ @LDFLAG_LEVELDB@
 Libs.private: -lcrypto -ldl -lz
 
