leveldb and bdb can work alongside each other now.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,5 @@
+AUTOMAKE_OPTIONS = subdir-objects
+
 lib_LTLIBRARIES = libbitcoin.la
 AM_CPPFLAGS = -I$(srcdir)/../include
 AM_CXXFLAGS = ${my_CXXFLAGS}
@@ -33,22 +35,21 @@ libbitcoin_la_SOURCES = \
 	blockchain/blockchain.cpp \
 	transaction_pool.cpp
 
-#if DO_BDB
-#libbitcoin_la_SOURCES += \
-#	blockchain/bdb/data_type.cpp \
-#	blockchain/bdb/txn_guard.cpp \
-#	blockchain/bdb/bdb_blockchain.cpp \
-#	blockchain/bdb/bitcoin.pb.cc \
-#	blockchain/bdb/bdb_chain_keeper.cpp \
-#	blockchain/bdb/bdb_organizer.cpp \
-#	blockchain/bdb/bdb_validate_block.cpp \
-#	blockchain/bdb/bdb_common.cpp \
-#	blockchain/bdb/protobuf_wrapper.cpp
-#endif
+if DO_BDB
+libbitcoin_la_SOURCES += \
+	blockchain/bdb/data_type.cpp \
+	blockchain/bdb/txn_guard.cpp \
+	blockchain/bdb/bdb_blockchain.cpp \
+	blockchain/bdb/bdb_bitcoin.pb.cc \
+	blockchain/bdb/bdb_chain_keeper.cpp \
+	blockchain/bdb/bdb_organizer.cpp \
+	blockchain/bdb/bdb_validate_block.cpp \
+	blockchain/bdb/bdb_common.cpp \
+	blockchain/bdb/protobuf_wrapper.cpp
+endif
 
 if DO_LEVELDB
 libbitcoin_la_SOURCES += \
-	blockchain/leveldb/data_type.cpp \
 	blockchain/leveldb/leveldb_blockchain.cpp \
 	blockchain/leveldb/bitcoin.pb.cc \
 	blockchain/leveldb/leveldb_chain_keeper.cpp \
