first step migration to new naming scheme for messages (now called primitives)

--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -6,6 +6,7 @@ bitcoin_include_HEADERS = \
 	error.hpp \
 	validate.hpp \
 	messages.hpp \
+	primitives.hpp \
 	script.hpp \
 	address.hpp \
 	transaction.hpp \
