--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,7 @@ AC_LANG(C++)
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([-Wall -Werror])
+AM_PROG_AR
 LT_INIT
 AC_PROG_CXX
 CHECK_GXX_CPP0X
