--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -7,7 +7,7 @@ Name: libbitcoin
 Description:  Rewrite bitcoin, make it super-pluggable, very easy to do and hack everything at every level, and very configurable.
 Version: @PACKAGE_VERSION@
 Requires: libcurl
-Cflags: -I${includedir} -std=gnu++0x @CFLAG_BDB@ @CFLAG_LEVELDB@
-Libs: -L${libdir} -lbitcoin -lboost_thread -lboost_system -lboost_regex -lboost_filesystem -lpthread -lcurl @LDFLAG_BDB@ @LDFLAG_LEVELDB@
+Cflags: -I${includedir} -std=gnu++0x @CFLAG_LEVELDB@
+Libs: -L${libdir} -lbitcoin -lboost_thread -lboost_system -lboost_regex -lboost_filesystem -lpthread -lcurl @LDFLAG_LEVELDB@
 Libs.private: -lcrypto -ldl -lz
 
