purged protobuf. introduced new hash_digest_list, short_hash_list and block_header_type. database is storing block directly on disk with hashes now.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,4 @@
-CXXFLAGS=$(shell pkg-config --cflags libbitcoin)
+CXXFLAGS=$(shell pkg-config --cflags libbitcoin) -ggdb
 LIBS=$(shell pkg-config --libs libbitcoin)
 
 default: all
